# asm-spec

./: .dockerignore  .gitignore  ARTIFACT.md  ASM-Pitch-Deck.pptx  ASM曝光与学术规划.md  CIRCLE-PRODUCT-FEEDBACK.md  CONTRIBUTING.md  DEMO-SCRIPT.md  Dockerfile  Dockerfile.artifact  HACKATHON.md  Makefile  PROJECT-CONTEXT.md  README-HACKATHON-ADDITIONS.md  README.md  SUBMISSION-DRAFT.md  WORKLOG-2026-04-19.md  asm_cli.py  docker-compose.yml  execution-guide.md  github-discussion-69-reply.md  mcp_server_json_asm.py  pyproject.toml  railway.json  vercel.json  冲刺计划-4月.md  更新说明-20260407.md  论文阅读指南.md  调研文档.md  黑客松选择建议.md
crawler/: config.yaml  crawl.py  requirements.txt
demo/: receipts_demo.py  verify_demo.py
discovery/: README.md  package-lock.json  package.json  tsconfig.json
docs/: HAMZA-VIDEO-PACK.md  INDEX.md  circle-feedback-log.md  circle-feedback-submission.md  demo-scenario.md  good-first-issues.md  lablab-submission.md  paper-results.md  release-v0.3.1.md  submission-checklist.md
experiments/: README.md  ab_test.py  ablation_experiments.py  analyze.py  generate_paper_tables.py  llm_selector_baseline.py  mcp_ecosystem_audit.py  mcp_value_metadata_audit.py  preference_alignment.py  preference_alignment_tasks.json  real_ab_test.py  real_ab_test_v2.py  selection_baselines.py
manifests/: airtable-api.asm.json  anthropic-claude-sonnet-4.asm.json  betterstack-logs.asm.json  bfl-flux-1.1-pro.asm.json  browserbase-api.asm.json  cal-com.asm.json  circleci.asm.json  clerk-auth.asm.json  cloudconvert.asm.json  cloudflare-dns.asm.json  cloudflare-r2.asm.json  fly-io.asm.json  (+63 more)
(+229 files in other folders)
